# idatt2104

./: Cargo.toml  Dockerfile  README.md
data/: request.html
src/: lib.rs
src/data/: request.html
